# esp32-c3-zero-standby-sensor

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
KiCad/: ESP32C3-BME280.kicad_pcb  ESP32C3-BME280.kicad_prl  ESP32C3-BME280.kicad_pro  ESP32C3-BME280.kicad_sch
components/_shared/: CMakeLists.txt  sensor_data.h
components/battery_monitor/: CMakeLists.txt  battery_monitor.c  battery_monitor.h
components/bme280_driver/: CMakeLists.txt  bme280_driver.c  bme280_driver.h
components/espnow_sender/: CMakeLists.txt  espnow_sender.c  espnow_sender.h
components/power_manager/: CMakeLists.txt  power_manager.c  power_manager.h
components/sensor_manager/: CMakeLists.txt  sensor_manager.c  sensor_manager.h
components/wifi_service/: CMakeLists.txt  wifi_service.c  wifi_service.h
components/z_utils/: CMakeLists.txt  crc8.c  crc8.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/include/: sensor_data.h
main/network/: espnow_transmitter.c  espnow_transmitter.h  wifi.c  wifi.h
